Fix head wrapper misaligned

--- a/stylesheet/custom.css
+++ b/stylesheet/custom.css
@@ -493,7 +493,7 @@ input[type=radio]:checked + label {
 .mission-head-wrapper,
 .question-head-wrapper,
 .grade-head-wrapper,
-.reward-item-wrapper {
+.reward-head-wrapper {
     text-align: center;
     margin-bottom: 10px;
 }
